:toc: macro
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-01-30

=== Fixed

* Fix invalid link in README
* Fix missing the `lang` attribute in the book

== {compare-url}/v0.4.3\...v0.5.0[0.5.0] - 2023-01-28

=== Changed

* Bump sysexits to v0.4
* Bump MSRV to 1.64.0

=== Fixed

* Fix create a package for Windows in CD

== {compare-url}/v0.4.2\...v0.4.3[0.4.3] - 2022-12-10

=== Fixed

* Fix build man pages in CD

== {compare-url}/v0.4.1\...v0.4.2[0.4.2] - 2022-11-24

=== Changed

* Change error messages to start with lowercase

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2022-11-22

=== Changed

* Bump clap to v4.0

== {compare-url}/v0.3.3\...v0.4.0[0.4.0] - 2022-09-18

=== Changed

* Allow non-UTF-8 paths as arguments

== {compare-url}/v0.3.2\...v0.3.3[0.3.3] - 2022-09-06 [YANKED]

=== Added

* Add the default color to `--foreground` and `--background`

=== Changed

* Bump MSRV to 1.62.0

== {compare-url}/v0.3.1\...v0.3.2[0.3.2] - 2022-08-28

=== Changed

* Change to case insensitive when the option's value collating

== {compare-url}/v0.3.0\...v0.3.1[0.3.1] - 2022-08-27

=== Fixed

* Change `qrcode` crate to get from crates.io.
  This is for publishing on crates.io.

== {compare-url}/v0.2.0\...v0.3.0[0.3.0] - 2022-08-26 [YANKED]

=== Added

* Add aliases to `--error-correction-level` and `--symbol-version` of `encode`
  command

=== Changed

* Change to use fork of `qrcode` crate.
  This is to support `image` crate version 0.24.
  Thanks to https://github.com/qm3ster[@qm3ster].
* Change to output only 32-bit RGBA image when outputting PNG
* Change to be able to input the image from stdin