@@ -75,6 +75,10 @@ _IMAGE_::
 
       JPEG.
 
+    *openexr*::::
+
+      OpenEXR.
+
     *png*::::
 
       Portable Network Graphics.
