@@ -12,6 +12,16 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.5.1\...HEAD[Unreleased]
+
+=== Added
+
+* Add OpenEXR as an input format
+
+=== Changed
+
+* Change to use `qrencode` crate
+
 == {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-01-30
 
 === Fixed
